--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -13,6 +13,15 @@ body {
   background: #f0f0f0;
 }
 
+a{
+  text-decoration: none;
+  color: white;
+}
+
+html{
+  scroll-behavior: smooth;
+}
+
 /* line 14, ../sass/index.scss */
 header {
   background: #FFF;
